--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ h1 {
     font-size: 50px;
 }
 
+/* start quiz button styling */
 #start-btn {
   background-color: #5dbea3;
   border-radius: 8px;
@@ -16,11 +17,22 @@ h1 {
   font-size: 14px;
 }
 
+/* submit button styling */
+.submitBtn {
+    border-radius: 5px;
+    height: 30px;
+    width: 100px;
+    background-color: #5dbea3;
+    font-size: 14px;
+}
+
+/* timer styling */
 #timer {
     text-align: right;
     font-size: 20px;
 }
 
+/* view high scores link styling */
 .high-score-text {
     color: #5adbb5;
     font-size: 20px;
@@ -31,9 +43,9 @@ h1 {
     text-decoration: none;
 }
 
-
+/* button styling */
 .btns {
-    font-size: 1.15rem;
+    font-size: 20px;
     padding: 10px;
     border-radius: 8px;
     border: none;
@@ -49,4 +61,41 @@ h1 {
 
 .btns:hover {
     cursor: pointer;
+}
+
+/* multiple choices */
+#choices {
+    justify-content: center;
+    align-items: center;
+}
+
+/* gets rid of bullet point on list in highscore page */
+li {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+/* input field for intials */
+input {
+    height: 3vh;
+    border-radius: 10px;
+}
+
+/* button styling for highscore page */
+.HSbtns {
+    height: 4vh;
+    border-radius: 10px;
+    background-color: #5dbea3;
+}
+
+.HSbtns:hover {
+    cursor: pointer;;
+}
+
+/* banner that says correct/wrong styling */
+#footer-location {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px;
 }
